--- a/index..html
+++ b/index..html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deepak Gupta | Web Developer</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/responsivestyle.css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/responsivestyle.css" type="text/css" />
      <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    type="text/css" />
     <link
       rel="icon"
       href="./assets/icons/icons8-portfolio-48.png"
@@ -336,10 +336,10 @@
    <ion-icon name="arrow-up-outline" class="scroll-up" id="scroll-up"></ion-icon>
 
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" type="text/JavaScript"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
+    type="text/JavaScript"></script>
   </body>
 </html>
