Change profile image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
     <section class="hero" id="about">
       <img
-        src="assets/images/deepak.png"
+        src="assets/images/deepak.jpg"
         alt="Deepak Gupta"
         loading="lazy"
         class="hero-img"
